--- a/クラシコム/index.html
+++ b/クラシコム/index.html
@@ -91,7 +91,7 @@
               クラシコムは、私たちが提案する世界観（ライフカルチャー）に共感する人たちの「フィッ<br>トする暮らし」づくりに貢献、その仕事を通じてスタッフ自身の「フィットする暮らし」を模索することで、
               世の中に魅<br>力的な選択肢を一つ創り出し、Well-beingに過ごせる「心地よい社会」実現の一助になりたいと考えています。<br><br>
               「ミッション＝フィットする暮らし、つくろう。」を果たすために、経営は「マニュフェスト＝自由・平和・希望」を目指し、<br>スタッフは「ポリシー＝正直・公正・親切」を判断指針に、
-              日々「フォーム＝センシティブ・チャーミング・サステナブル」<br>を意識した姿勢で挑みます。
+              日々「フォーム＝センシティブ・チャーミング・サステナブル」<br>を意識した姿勢で臨みます。
             </p>
           </div>
       </section>
