--- a/クラシコム/index.html
+++ b/クラシコム/index.html
@@ -10,42 +10,58 @@
   <body>
     <!-- ヘッダー -->
     <header>
-      <!-- <div class="fixed-header"> -->
-      <div class="container">
+      <!-- <div class="container"> -->
         <!-- ロゴエリア -->
-        <div class="area_logo_header">
+        <div class="area_logo_header_1">
           <a class="logo" href="">
-            <img src="images/logo_typo_wide.svg" class="imag2" alt="ロゴ写真">
+            <img src="images/logo_typo_wide.svg" class="imag1" alt="ロゴ写真">
           </a>
         </div>
-        <!-- ナビゲーション -->
-        <nav class="area_nav_header">
-          <ul class="list_nav_header">
-           <li>
-            <a href="">ニュース</a>
-           </li> 
-           <li>
-            <a href="">クラシコムについて</a>
-           </li> 
-           <li>
-            <a href="">事業紹介</a>
-           </li> 
-           <li>
-            <a href="">採用情報</a>
-           </li> 
-           <li>
-            <a href="">IR情報</a>
-           </li> 
-           <li>
-            <a href="">ジャーナル</a>
-           </li> 
-           <li>
-            <a class="language" href="">English</a>
-           </li> 
+        <!-- PC用ナビゲーション -->
+        <nav class="nav-pc">
+          <ul class="list_nav_header_1">
+           <li><a href="index.html">ニュース</a></li> 
+           <li><a href="index.html">クラシコムについて</a></li> 
+           <li><a href="index.html">事業紹介</a></li> 
+           <li><a href="index.html">採用情報</a></li> 
+           <li><a href="index.html">IR情報</a></li> 
+           <li><a href="index.html">ジャーナル</a></li> 
+           <li><a class="language" href="">English</a></li> 
           </ul>
         </nav>
       </div>
-      <!-- </div> -->
+
+        <!-- スマホ用メニューボタン  -->
+        <nav id="menu-sp">
+          <!-- ナビゲーションを開く -->
+          <div class="hamburger_open" onclick="document.getElementById('nav-sp').style.display = 'block'">
+            <span class="ham_open"></span>
+            <span class="ham_open"></span>
+          </div>
+        </nav>
+        <!-- メニューの中身 -->
+        <!-- ナビゲーションを閉じる -->
+        <nav id="nav-sp">
+          <div class="hamburger_close" onclick="document.getElementById('nav-sp').style.display = 'block'">
+            <span class="ham_close_1"></span>
+            <span class="ham_close_2"></span>
+          </div>
+          <!-- メニューリスト -->
+          <ul class="list_nav_header_2">
+            <div class="area_logo_header_1">
+              <a class="logo" href="">
+                <img src="images/logo_typo_wide.svg" class="img1" alt="ロゴ写真">
+              </a>
+            </div>
+            <li><a href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'">ニュース</a></li> 
+            <li><a href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'">クラシコムについて</a></li> 
+            <li><a href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'">事業紹介</a></li> 
+            <li><a href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'">採用情報</a></li> 
+            <li><a href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'">IR情報</a></li> 
+            <li><a href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'">ジャーナル</a></li> 
+            <li><a class="language" href="" onclick="document.getElementById('nav-sp').style.display = 'none'">English</a></li>
+          </ul>
+        </nav>
     </header>
     <!-- メイン -->
     <main>
@@ -56,26 +72,22 @@
         </div>
         <div class="messages">
            <div class="messages_01">
-            <h2 class="president_messages_bold">代表メッセージ</h2><br><br>
-            <p class="p_01">
-            クラシコムは、オーダーメイドなライフスタイルを<br>求めるお客様を、様々なサービスの提供を通して、<br>お手伝いすることを目的に設立されました。<br><br>
-            私たちは、人生が自分用にあつかえられたかのよう<br>に、「フィットしている」と感じられる事こそ、本当<br>の意味で豊かで幸せな事だと考えています。<br><br>
-            自分にぴったりの仕事<br>気のおけないパートナー<br>こだわりを生かした住まい<br>等身大の自分を表現できるファッション<br><br>
-            などなど、自分にフィットする物を捜し、それに<br>出会う。<br>
-            その過程で誰かと比較する必要も無い、自分用のフ<br>ィットする暮らしをつくって行く。<br><br>
-            そうやって多くの人々が、自分の人生をお気に入り<br>の着心地抜群のシャツのように感じるようになった<br>なら、自由で、多様で、寛容で、ハッピーな世の中<br>になるんじゃないか。そんなことを夢見ています。<br>
-            そして、私たちはその実現に、微力ながら貢献した<br>いと心から願っています。<br><br>
-            クラシコムのこれからに、どうぞご期待ください。<br><br>
-            株式会社クラシコム<br>
-            代表取締役社長 青木耕平
-            </p>
+            <h2 class="president_messages_bold">代表メッセージ</h2>
+            <p class="p_01">クラシコムは、オーダーメイドなライフスタイルを求めるお客様を、様々なサービスの提供を通して、お手伝いすることを目的に設立されました。
+            <p class="p_01">私たちは、人生が自分用にあつかえられたかのように、「フィットしている」と感じられる事こそ、本当の意味で豊かで幸せな事だと考えています。</p>
+            <p class="p_01">自分にぴったりの仕事<br>気のおけないパートナー<br>こだわりを生かした住まい<br>等身大の自分を表現できるファッション</p>
+            <p class="p_01">などなど、自分にフィットするものを捜し、それに出会う。<br>その過程で誰かと比較する必要もない、自分用のフィットする暮し方をつくって行く。</p>
+            <p class="p_01">そうやって多くの人々が、自分の人生をお気に入りの着心地抜群のシャツのように感じるようになったなら、自由で、多様で、寛容で、ハッピーな世の中になるんじゃないか。そんなことを夢見ています。<br>
+            そして、私たちはその実現に、微力ながら貢献したいと心から願っています。</p>
+            <p class="p_01">クラシコムのこれからに、どうぞご期待ください。</p>
+            <p class="p_01">株式会社クラシコム<br>代表取締役社長 青木耕平</p>
            </div>
            <div class="photo_01">
-            <img src="images/about_aoki01.png" class="img2" alt="代表取締役社長の写真">
+            <img src="images/about_aoki01.png" class="img2"alt="代表の顔写真">
            </div>
         </div>
         <div class="photo_02">
-          <img src="images/about.jpg" class="img3" alt="社内写真">
+          <img src="images/about.jpg" class="img3"alt="社内写真">
         </div>
       </section>
       <!-- ミッション -->
@@ -87,11 +99,13 @@
           <div class="messages_02">
             <h2 class="caption">フィットする暮らしを、つくろう。</h2>
             <p class="p_02">
-              私たちは、”Well-being"に欠かせない要件の一つが「自分の生き方を自分らしいと感じ、満足できること」=「フィットす<br>る暮らし」だと考えています。
-              クラシコムは、私たちが提案する世界観（ライフカルチャー）に共感する人たちの「フィッ<br>トする暮らし」づくりに貢献、その仕事を通じてスタッフ自身の「フィットする暮らし」を模索することで、
-              世の中に魅<br>力的な選択肢を一つ創り出し、Well-beingに過ごせる「心地よい社会」実現の一助になりたいと考えています。<br><br>
-              「ミッション＝フィットする暮らし、つくろう。」を果たすために、経営は「マニュフェスト＝自由・平和・希望」を目指し、<br>スタッフは「ポリシー＝正直・公正・親切」を判断指針に、
-              日々「フォーム＝センシティブ・チャーミング・サステナブル」<br>を意識した姿勢で臨みます。
+              私たちは、”Well-being"に欠かせない要件の一つが「自分の生き方を自分らしいと感じ、満足できること」=「フィットする暮らし」だと考えています。
+              クラシコムは、私たちが提案する世界観（ライフカルチャー）に共感する人たちの「フィットする暮らし」づくりに貢献、その仕事を通じてスタッフ自身の「フィットする暮らし」を模索することで、
+              世の中に魅力的な選択肢を一つ創り出し、Well-beingに過ごせる「心地よい社会」実現の一助になりたいと考えています。
+            </p>
+            <p class="p_02">
+              「ミッション＝フィットする暮らし、つくろう。」を果たすために、経営は「マニュフェスト＝自由・平和・希望」を目指し、スタッフは「ポリシー＝正直・公正・親切」を判断指針に、
+              日々「フォーム＝センシティブ・チャーミング・サステナブル」を意識した姿勢で臨みます。
             </p>
           </div>
       </section>
